fixed mobile side nav. disply side nav only on large screens. display footer only on small screens

--- a/src/components/pages/layout/styles.css
+++ b/src/components/pages/layout/styles.css
@@ -1,24 +1,3 @@
 body {
     background-image: url('/public/images/png/ninja1.png')
 }
-#icon-container {
-    position: absolute;
-    width:60px;
-    height: 180px;
-    background-color: rgba(5, 5, 5, 0.274);
-    border-radius: 0px 10px 10px 0px;
-    top: 50vh;
-    z-index: 500;
-}
-
-.github{
-    color: blue;
-}
-
-.linkedIn {
-    color: yellow;
-}
-
-.contact {
-    color: red;
-}
